[package]
name = "ethers-rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ethers = { version = "1.0.0", features = ["ws"] }
tokio = { version = "1.22.0", features = ["full"] }
eyre = "0.6.8"